feat: implement trip sharing feature with UUID links

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -3,3 +3,15 @@ VITE_GOOGLE_MAPS_API_KEY=your_api_key_here
 
 # Backend API URL
 VITE_API_BASE_URL=http://localhost:8000/api
+
+# Firebase Configuration
+VITE_FIREBASE_API_KEY=your_key
+VITE_FIREBASE_AUTH_DOMAIN=your_key
+VITE_FIREBASE_PROJECT_ID=your_key
+VITE_FIREBASE_STORAGE_BUCKET=your_key
+VITE_FIREBASE_MESSAGING_SENDER_ID=your_key
+VITE_FIREBASE_APP_ID=your_key
+VITE_FIREBASE_MEASUREMENT_ID=your_key
+
+# Kakao SDK App Key (for sharing feature)
+VITE_KAKAO_APP_KEY=0e9b31bd0d49f21645ad1108d8a93e09
