--- a/backend/.env.example
+++ b/backend/.env.example
@@ -12,3 +12,6 @@ DATABASE_PORT=5432
 
 # Google Maps API Key
 GOOGLE_MAPS_API_KEY=your-google-maps-api-key-here
+
+# Frontend URL (for sharing feature)
+FRONTEND_URL=http://localhost:5173
